[project]
name = "db-names"
version = "0.0.0"
description = "Парсер структуры хранения базы 1С"
requires-python = ">=3.13"
dependencies = [
    "bom-decompressor",
    "curly-array",
    "sqlalchemy",
]

[tool.uv.sources]
curly-array = { git = "https://gitflic.ru/project/e1c/py-curly-array.git" }
bom-decompressor = { git = "https://gitflic.ru/project/e1c/py-bom-decompressor.git" }
