[project]
name = "db-names"
version = "0.0.0"
description = "Парсер структуры хранения базы 1С"
requires-python = ">=3.13"
dependencies = [
    "bom-decompressor",
    "curly-array",
    "sqlalchemy[mssql]",
]

[tool.uv.sources]
curly-array = { git = "https://gitflic.ru/project/e1c/py-curly-array.git", rev = "116752242b3b87e2f4578689e82f9ce601b08243" }
bom-decompressor = { git = "https://gitflic.ru/project/e1c/py-bom-decompressor.git", rev = "4308ea690aa014a1b592a8943bc3bf48e00651b7" }
